--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "bootstrap": "~3.3.6"
+    "bootstrap": "~3.3.6",
+    "font-awesome": "~4.5.0"
   }
 }
