--- a/_data/personal.yml
+++ b/_data/personal.yml
@@ -6,7 +6,7 @@ pets: "no"
 education: "MSU"
 smoking: "negative"
 alcohol: "negative"
-political: "anarchy"
+culture: "cyberpunk"
 profession: "developer"
 religion: "atheism"
 hardware: "Apple"
