--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "font-awesome": "~4.5.0",
     "animate.css": "~3.5.1",
     "js-yaml": "~3.5.4",
-    "bootstra.386": "kristopolous/BOOTSTRA.386#efa125854e252191d1ae3f930cb6adeb358531a9"
+    "bootstra.386": "kristopolous/BOOTSTRA.386#efa125854e252191d1ae3f930cb6adeb358531a9",
+    "typed.js": "^2.0.6"
   }
 }
