--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "animate.css": "~3.5.1",
     "js-yaml": "~3.5.4",
     "bootstra.386": "kristopolous/BOOTSTRA.386#efa125854e252191d1ae3f930cb6adeb358531a9",
-    "typed.js": "^2.0.6"
+    "typed.js": "^2.0.6",
+    "novacancy.js": "chuckyglitch/novacancy.js#ec005e0546fd1832d2b1bbd76e4a5d1ef3205717"
   }
 }
