--- a/_data/contacts.yml
+++ b/_data/contacts.yml
@@ -9,7 +9,7 @@
   value: tkachuk.i.m.
 -
   title: Telegram
-  value: lltimCFll
+  value: +7977 815 5221
 -
   title: Phone
   value: +372 5811 4271
