new Contacts background

--- a/_data/preferences_negative.yml
+++ b/_data/preferences_negative.yml
@@ -41,7 +41,7 @@
   icon:   "/img/scrum.png"
   title:  "Scrum and bureaucracy"
   note:   |
-    I think it's possible for some people that the scrum is working pretty well.
+    I think it's possible that for some people scrum is working pretty well.
     But not for me.
     Scrum process and useless regular meetings make boredom and greatly slow me down.
     It seems that the scrum is working well when everything is going according to plan
